--- a/pyompa_scripts/ETNP_pyompa_for_WOD_USER_FRIENDLY_BASE_VERSION.ipynb
+++ b/pyompa_scripts/ETNP_pyompa_for_WOD_USER_FRIENDLY_BASE_VERSION.ipynb
@@ -678,7 +678,7 @@
         "    \"AAIW\": GeneralPenaltyFunc(\n",
         "        spec={\n",
         "            'pdens':\n",
-        "            {'type':'exp_other',\"alpha\":0.03, \"beta\":50, 'lowerbound':26.7}})\n",
+        "            {'type':'exp_other',\"alpha\":0.03, \"beta\":50, 'lowerbound':26.7}})}\n",
         "\n",
         "# These are the weighting for each parameter.\n",
         "paramweightings = {\n",
@@ -909,7 +909,7 @@
       "source": [
         "from collections import OrderedDict\n",
         "\n",
-        "ORIG_COLS_TO_INCLUDE = list(inp_df.columns.values) # all of the columns. A subset can be used instead if so desired.\n",
+        "ORIG_COLS_TO_INCLUDE = list(data_df.columns.values) # all of the columns. A subset can be used instead if so desired.\n",
         "ETNP_df_ompasoln.export_to_csv(\n",
         "    csv_output_name=\"ETNP_df_ompasoln_single.csv\",\n",
         "    orig_cols_to_include=ORIG_COLS_TO_INCLUDE)\n",
@@ -954,7 +954,6 @@
     },
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
